# ChangeLog for sys-libs/com_err
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/com_err/Attic/ChangeLog,v 1.21 2005/11/10 21:22:09 flameeyes Exp $

  10 Nov 2005; Diego Pettenò <flameeyes@gentoo.org> com_err-1.38.ebuild:
  Move exporting of vars in src_compile() and src_install() to work around
  portage env bug, similar to sys-fs/e2fsprogs-1.38.

  08 Sep 2005; Aaron Walker <ka0ttic@gentoo.org> com_err-1.38.ebuild:
  Stable on mips.

  11 Aug 2005; Mike Frysinger <vapier@gentoo.org>
  files/com_err-1.37-makefile.patch:
  Clean up cross-compile support.

  03 Aug 2005; Mike Frysinger <vapier@gentoo.org> com_err-1.38.ebuild:
  Use bsd-shlibs on Darwin but elf-shlibs on all other systems #99728 by Kito.

  25 Jul 2005; Rene Nussbaumer <killerfox@gentoo.org> com_err-1.38.ebuild:
  Stable on hppa.

  20 Jul 2005; Markus Rothe <corsair@gentoo.org> com_err-1.38.ebuild:
  Stable on ppc64

  19 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> com_err-1.38.ebuild:
  Stable on alpha.

  15 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org> com_err-1.38.ebuild:
  Stable on sparc

  14 Jul 2005; Seemant Kulleen <seemant@gentoo.org> com_err-1.38.ebuild:
  bumping to stable, fixes bug #98303 by WGi <wgi@muenster.de>

*com_err-1.38 (09 Jul 2005)

  09 Jul 2005; Mike Frysinger <vapier@gentoo.org> +com_err-1.38.ebuild:
  Version bump #98331 by Joshua.

  29 Jun 2005; Joshua Kinard <kumba@gentoo.org> com_err-1.37.ebuild:
  Marked stable on mips.

  28 Jun 2005; Bryan Østergaard <kloeri@gentoo.org> com_err-1.37.ebuild:
  Stable on alpha.

  27 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> com_err-1.37.ebuild:
  Stable on hppa.

  27 Jun 2005; Seemant Kulleen <seemant@gentoo.org> com_err-1.37.ebuild:
  stable x86 and amd64 because of bug 96727

  26 Jun 2005; Markus Rothe <corsair@gentoo.org> com_err-1.37.ebuild:
  Stable on ppc64 (bug #96156)

  24 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org> com_err-1.37.ebuild: