@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/ss
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/Attic/ChangeLog,v 1.20 2005/11/10 21:26:46 flameeyes Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/ss/Attic/ChangeLog,v 1.21 2006/01/06 23:37:59 flameeyes Exp $
+
+  06 Jan 2006; Diego Pettenò <flameeyes@gentoo.org> ss-1.38.ebuild:
+  Replace an userland check by $CHOST check; added comment with reasons.
 
   10 Nov 2005; Diego Pettenò <flameeyes@gentoo.org> ss-1.38.ebuild:
   Move exporting of vars in src_compile() and src_install() to work around
