@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/com_err
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/com_err/Attic/ChangeLog,v 1.21 2005/11/10 21:22:09 flameeyes Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/com_err/Attic/ChangeLog,v 1.22 2006/01/06 23:34:22 flameeyes Exp $
+
+  06 Jan 2006; Diego Pettenò <flameeyes@gentoo.org> com_err-1.38.ebuild:
+  Replace an userland check by $CHOST check; added comment with reasons.
 
   10 Nov 2005; Diego Pettenò <flameeyes@gentoo.org> com_err-1.38.ebuild:
   Move exporting of vars in src_compile() and src_install() to work around
